# groundhogeday

./: .gitignore  .gitleaksignore  .vercelignore  package-lock.json  package.json  tsconfig.json
app/: globals.css  layout.tsx  page.tsx
app/cards/: layout.tsx  page.tsx
app/ceremony/: page.tsx
app/dao/: page.tsx
app/elixir/: page.tsx
app/hibernate/: page.tsx
app/inner-circle/: page.tsx
app/legends/: LegendsContent.tsx  opengraph-image.tsx  page.tsx
app/merch/: page.tsx
app/predict/: PredictContent.tsx  page.tsx
app/prophecy-archives/: layout.tsx  opengraph-image.tsx  page.tsx
app/rivals/: layout.tsx  page.tsx
components/: AccuracyReport.tsx  BiologicalResearch.tsx  ChainStats.tsx  Community.tsx  CountdownClock.tsx  CulturalAffairs.tsx  Footer.tsx  Hero.tsx  HibernatePanel.tsx  LoreTeaser.tsx  NavHeader.tsx  OracleTerminal.tsx  Prophecy.tsx  SacredTexts.tsx  SwapPanel.tsx  TickerBar.tsx  WalletButton.tsx  WalletProvider.tsx
content/social/: DISTRIBUTION-STRATEGY.md  discord-telegram.md  hacker-news.md  reddit-crypto.md  reddit-movies-misc.md  reddit-todayilearned.md  x-threads.md
design/: gen_logos.py
docs/: security-audit-2026-04-08.md
docs/plans/: 2026-04-08-groundhogeday-site-design.md  2026-04-08-handoff-burrow-complete.md  (+10 more)
hooks/: useChainStats.ts  useInView.ts
lib/: card-data.ts  hibernate.ts  oracle-bot.ts  shadow-history.ts  solana.ts  swap.ts
solana/: Anchor.toml  hibernate-info.json  mint-info.json  package-lock.json  package.json  pool-info.json  tsconfig.json
solana/programs/groundhoge-burrow/: Cargo.toml
solana/programs/groundhoge-burrow/src/: lib.rs
solana/programs/groundhoge-hibernate/: Cargo.toml
solana/programs/groundhoge-hibernate/src/: lib.rs
solana/programs/groundhoge-hook/: Cargo.toml
solana/programs/groundhoge-hook/src/: lib.rs
(+20 files in other folders)
