[package]
name = "groundhoge-burrow"
version = "0.1.0"
description = "The Burrow — Groundhoge Day AMM pool ($HOGE/SOL)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "groundhoge_burrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
spl-transfer-hook-interface = "0.8"
spl-tlv-account-resolution = "0.8"
