[package]
name = "groundhoge-hibernate"
version = "0.1.0"
description = "Hibernation Portal — $HOGE staking with tiered Elixir rewards"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "groundhoge_hibernate"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
