[package]
name = "groundhoge-hook"
version = "0.1.0"
description = "Groundhoge Day Transfer Hook — daily sell limits + 109th tx trap"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "groundhoge_hook"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
spl-transfer-hook-interface = "0.8"
spl-tlv-account-resolution = "0.8"
